--- a/front/src/components/ClimateDataUpdateForm/UpdateForm/UpdateForm.css
+++ b/front/src/components/ClimateDataUpdateForm/UpdateForm/UpdateForm.css
@@ -35,3 +35,11 @@
     margin-bottom: 8px;
     font-family: 'Poppins', sans-serif;
 }
+
+.UpdateForm-errorMessage {
+    color: red;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    background-color: white;
+}
