--- a/front/src/components/ClimateDataUpdateForm/UpdateForm/UpdateForm.css
+++ b/front/src/components/ClimateDataUpdateForm/UpdateForm/UpdateForm.css
@@ -43,3 +43,10 @@
     font-size: 14px;
     background-color: white;
 }
+
+@media only screen and (max-width: 900px) {
+    .UpdateForm input {
+        width: 90%;
+        margin-right: 20px;
+    }
+}
